# rikkahub-desktop

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_ZH_CN.md  README_ZH_TW.md  视觉效果优化方案.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
analytics/: README.md  package.json  schema.sql  wrangler.toml
analytics/dashboard/: index.html.ts
analytics/src/: index.ts  ping.ts  stats.ts
docs/: index.html  robots.txt  sitemap.xml
fonts/: manifest.json
functions/: _lib.ts  dashboard.ts  ping.ts
functions/_sql/: 0002_telemetry_extend.sql  schema.sql
functions/api/admin/: rebuild.ts
functions/api/stats/: index.ts
pc-server/: README.md  package.json  server.ts  start-rikkahub-pc.cmd  wasm.d.ts
pc-server/scripts/: request-chain-smoke.ts  smoke-dashboard.ts
web-ui/: CLAUDE.md  README.md  components.json  copy.ts  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
web-ui/app/: app.css  i18n.ts  root.tsx  routes.ts
web-ui/app/components/: avatar-cropper.tsx  conversation-quick-jump.tsx  conversation-search-button.tsx  conversation-sidebar.tsx  custom-theme-dialog.tsx  font-face-injector.tsx  font-picker.tsx  global-drop-zone.tsx  keybinding-settings.tsx  model-edit-dialog.tsx  model-picker-dialog.tsx  theme-provider.tsx  (+4 more)
web-ui/src-tauri/: Cargo.toml  build.rs  cargo-msvc.cmd  tauri-msvc.cmd  tauri.conf.json
web-ui/src-tauri/capabilities/: main.json
web-ui/src-tauri/nsis/: installer-hooks.nsh  installer.template.nsi
web-ui/src-tauri/src/: lib.rs  main.rs
(+108 files in other folders)
